# compress-bg

./: README.md  TODO.md  compress-bg.py  pyproject.toml
doc/: DESC-C.md  DESC-G.md
pixi/: pixi.toml
src/compress_bg/: __init__.py  main.py
